# not-serious-engine

./: .gitignore  NAMING.md  README.md  meson.build
engine/include/: _internal.h  engine.h
engine/include/app/: app.h
engine/include/core/: array.h  error.h  io.h  platform.h  pool.h  profiler.h  types.h  version.h
engine/include/graphics/: buffer.h  color.h  material.h  mesh.h  texture.h  uniform.h
engine/include/loaders/: obj.h
engine/include/math/: math.h  matrix.h  transform.h  vector.h
engine/include/model/: model.h
engine/include/scene/: camera.h  scene.h
engine/src/app/: app.c
engine/src/core/: array.c  error.c  io.c  pool.c
engine/src/graphics/: buffer.c  material.c  mesh.c  texture.c  uniform.c
engine/src/loaders/: obj.c
engine/src/model/: model.c
engine/src/scene/: camera.c
game/src/: main.c
game/src/scenes/: materialdemo.c  materialdemo.h
game/src/shaders/: base.fsh  base.vsh  phong.fsh
scripts/: install_wraps.py  stats.py
